/**
 * Клас, що реалізує Interface1.
 */
public class Class1 implements Interface1 {
    private Class3 class3;  // Агрегація з Class3
    /**
     * Реалізація методу method1 з Interface1.
     */
    public void method1() {
        System.out.println("Class1: class1");
    }
}

