package org.example;
/**
 * Interface If1 which extends If1,
 * consists of abstract method "meth1"
 *

 * @author Yaroslavl
 */
public interface Interface1 {
    /**
     * A method to implement in classes that implement this interface.
     */
    void method1();
}