package org.example;
/**
 * Interface If2 which extends If1,
 * consists of abstract method "meth2"
 *
 * @author Yaroslavl
 */
public interface Interface2 extends Interface1 {
    /**
     * A method to implement in classes that implement this interface.
     */
    void method2();
}