package org.example;
/**
 * Interface If3 which
 * consists of abstract method "meth3" and implemented method "meth2"
 *
 * @author Yaroslavl
 */
public interface Interface3 extends Interface2 {
    /**
     * A method to implement in classes that implement this interface.
     */
    void method2();
    void method3();
}